<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Location</string>
    <string name="action_settings">Settings</string>
    <string name="clear_all_database">Clear all database</string>
    <string name="generate_stub_all">Generate all stub</string>
    <string name="generate_stub_location">Generate stub location</string>
    <string name="generate_stub_geofence">Generate stub geonfece</string>
    <string name="generate_stub_activity">Generate stub activity recognition</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="geofence_transition_error_detail">Geofence transition error, code %1$d message %2$s.</string>

</resources>