<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_generate_stub_location"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/generate_stub_location"/>
    <item
        android:id="@+id/action_generate_stub_geofence"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/generate_stub_geofence"/>
    <item
        android:id="@+id/action_generate_stub_activity"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/generate_stub_activity"/>
    <item
        android:id="@+id/action_generate_stub_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/generate_stub_all"/>
    <item
        android:id="@+id/action_clear_all_database"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clear_all_database"/>
</menu>